main page in progress

--- a/src/Components/&organisms/_index.scss
+++ b/src/Components/&organisms/_index.scss
@@ -3,8 +3,14 @@
 @import './Footer/footer';
 @import './Sidebar/sidebar';
 @import './AccordionBlock/accordion-block';
+@import './FormBlock/form-block';
 
 @import './Promo/promo';
 @import './Sale/sale';
 @import './UniqueConcept/unique-concept';
+@import './MobileApp/mobile-app';
+@import './Events/events';
+@import './EventBlock/event-block';
+@import './FreeTraining/free-training';
+@import './FreeTrainingRecording/free-training-recording';
 //@import './EmptyBlock/empty-block';
