--- a/src/Components/@atoms/_index.scss
+++ b/src/Components/@atoms/_index.scss
@@ -1,5 +1,7 @@
 @import './Button/button';
+@import './Suptitle/suptitle';
 @import './Title/title';
+@import './List/list';
 @import './Badge/badge';
 @import './Count/count';
 @import './Img/img';
@@ -15,6 +17,9 @@
 @import './ArrowBtn/arrow-btn';
 @import './ScrollBtn/scroll-btn';
 @import './PlayerBtn/player-btn';
+@import './FormAgree/form-agree';
+@import './Contact/contact';
+@import './Messanger/messanger';
 //@import './Radio/radio';
 //@import './Table/table';
 //@import './Info/info';
