--- a/src/Components/^molecules/_index.scss
+++ b/src/Components/^molecules/_index.scss
@@ -5,9 +5,18 @@
 @import './Apps/apps';
 @import './Slider/slider';
 @import './SliderNav/slider-nav';
+@import './TextBlock/text-block';
+@import './Video/video';
+@import './Leader/leader';
+@import './CircleText/circle-text';
+@import './DoubleMarquee/double-marquee';
+@import './SectionTop/section-top';
+@import './Contacts/contacts';
+@import './Messangers/messangers';
 
 @import './SaleArticle/sale-article';
 
+@import './AsideClient/aside-client';
 @import './AsideClients/aside-clients';
 
 @import './BoxLink/box-link';
