--- a/src/Components/^molecules/Video/_video.scss
+++ b/src/Components/^molecules/Video/_video.scss
@@ -1,6 +1,7 @@
 .video {
     $this: &;
 
+    position: relative;
     display: grid;
 
     @media (min-width: 1025px) {
@@ -56,7 +57,6 @@
         --pr: 2rem;
         --pb: 2rem;
         --pl: var(--offset-m);
-        --play: var(--offset-l);
 
         position: absolute;
         right: 0;
@@ -115,12 +115,9 @@
     }
 
     &__player {
-        width: var(--play);
-        height: var(--play);
-
-        @media (min-width: 1025px) {
-            grid-area: player;
-        }
+        position: absolute;
+        right: 0;
+        bottom: 0;
     }
 
     // .video__info
