--- a/src/scss/abstracts/extends/_bg.scss
+++ b/src/scss/abstracts/extends/_bg.scss
@@ -5,6 +5,12 @@
     object-fit: cover;
 }
 
+%contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 %bg-cover {
     background-size: cover;
     background-position: center;
