--- a/src/Components/@atoms/Select/_select.scss
+++ b/src/Components/@atoms/Select/_select.scss
@@ -7,7 +7,7 @@
     color: var(--black);
 
     &__title {
-        @extend %vertical-align;
+        @extend %flex-row-center;
         @include padding-x(var(--offset-s));
         gap: var(--offset-s);
         font-weight: 500;
@@ -17,26 +17,17 @@
         cursor: pointer;
         transition: 0.3s background-color, 0.3s border-color;
 
+        &-icon {
+            width: 2rem;
+            height: 2rem;
+            @extend %bg-contain;
+            transition: transform 0.3s ease-out;
+        }
+
         @media (any-hover: hover) {
             &:hover {
                 background-color: var(--light-gray);
                 border-color: var(--light-gray);
-            }
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 1.8rem;
-            right: var(--offset-s);
-            width: 2rem;
-            height: 2rem;
-            //background-image: url(../images/icons/drop.svg);
-            @extend %bg-contain;
-            transition: transform 0.3s ease-out;
-
-            @media (max-width: 1024px) {
-                top: 1.4rem;
             }
         }
 
@@ -45,8 +36,10 @@
             border-color: var(--yellow);
             border-bottom: none;
 
-            &::after {
-                transform: rotate(180deg);
+            #{$this} {
+                &__title-icon {
+                    transform: rotate(180deg);
+                }
             }
 
             @media (any-hover: hover) {
@@ -58,7 +51,6 @@
     }
 
     &__content {
-        display: none;
         position: absolute;
         top: var(--input-height);
         left: 0;
@@ -67,6 +59,15 @@
         border-top: none;
         z-index: 30;
         background-color: #fff;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        &.active {
+            opacity: 1;
+            visibility: visible;
+            pointer-events: all;
+        }
     }
 
     &__input {
@@ -101,14 +102,6 @@
             #{$this} {
                 &__title {
                     height: var(--arrow-btn);
-
-                    &::after {
-                        top: 1.5rem;
-
-                        @media (max-width: 1024px) {
-                            top: 1.1rem;
-                        }
-                    }
                 }
 
                 &__content {
@@ -121,12 +114,6 @@
             #{$this} {
                 &__title {
                     height: var(--select-height-xl);
-
-                    &:after {
-                        @media (min-width: 1025px) {
-                            top: 2.5rem;
-                        }
-                    }
                 }
 
                 &__content {
