--- a/src/Components/&organisms/_index.scss
+++ b/src/Components/&organisms/_index.scss
@@ -9,6 +9,7 @@
 @import './Sale/sale';
 @import './UniqueConcept/unique-concept';
 @import './MobileApp/mobile-app';
+@import './BlogSection/blog-section';
 @import './Events/events';
 @import './EventBlock/event-block';
 @import './FreeTraining/free-training';
