--- a/src/Components/^molecules/_index.scss
+++ b/src/Components/^molecules/_index.scss
@@ -15,6 +15,7 @@
 @import './Messangers/messangers';
 
 @import './SaleArticle/sale-article';
+@import './ArticleCard/article-card';
 
 @import './AsideClient/aside-client';
 @import './AsideClients/aside-clients';
