--- a/src/Components/&organisms/FreeTraining/_free-training.scss
+++ b/src/Components/&organisms/FreeTraining/_free-training.scss
@@ -36,6 +36,10 @@
         &:before {
             @include rect(top, left, 18.7rem, 0, 38.9rem, var(--beige));
         }
+
+        &:after {
+            @include rect(bottom, right, 0, 0, 49.1rem, #fff);
+        }
     }
 
     // .free-training__content
