--- a/src/Components/^molecules/AsideClient/_aside-client.scss
+++ b/src/Components/^molecules/AsideClient/_aside-client.scss
@@ -1,13 +1,19 @@
 .aside-client {
+    $this: &;
+
     display: none;
 
     @media (min-width: 1025px) {
+        display: block;
+    }
+
+    &__body {
         display: flex;
         flex-direction: column;
         align-items: center;
         //gap: var(--offset-xxxl);
 
-        > * {
+        >* {
             &:not(:last-child) {
                 margin-bottom: var(--offset-xxxl);
             }
@@ -62,12 +68,18 @@
 
     &--reverse {
         @media (min-width: 1025px) {
-            flex-direction: column-reverse;
+            padding-bottom: var(--offset-xl);
+            
+            #{$this} {
+                &__body {
+                    flex-direction: column-reverse;
 
-            > * {
-                &:not(:last-child) {
-                    margin-bottom: 0;
-                    margin-top: var(--offset-xxxl);
+                    >* {
+                        &:not(:last-child) {
+                            margin-bottom: 0;
+                            margin-top: var(--offset-xxxl);
+                        }
+                    }
                 }
             }
         }
