--- a/src/Components/^molecules/ArticleCard/_article-card.scss
+++ b/src/Components/^molecules/ArticleCard/_article-card.scss
@@ -117,6 +117,17 @@
                 margin-bottom: 3rem;
             }
         }
+
+        a {
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+            }
+        }
     }
 
     // .article-card__views
@@ -163,7 +174,11 @@
             }
 
             &-yellow {
-                background-color: #ffe099;
+                #{$this} {
+                    &__body {
+                        background-color: #ffe099;
+                    }
+                }
             }
 
             &-ocean {
