--- a/src/Components/&organisms/_index.scss
+++ b/src/Components/&organisms/_index.scss
@@ -14,4 +14,7 @@
 @import './EventBlock/event-block';
 @import './FreeTraining/free-training';
 @import './FreeTrainingRecording/free-training-recording';
+
+@import './PromoFaq/promo-faq';
+@import './FaqSection/faq-section';
 //@import './EmptyBlock/empty-block';
