--- a/src/Components/@atoms/_index.scss
+++ b/src/Components/@atoms/_index.scss
@@ -20,6 +20,7 @@
 @import './FormAgree/form-agree';
 @import './Contact/contact';
 @import './Messanger/messanger';
+@import './DecorTitle/decor-title';
 //@import './Radio/radio';
 //@import './Table/table';
 //@import './Info/info';
