--- a/src/Components/^molecules/_index.scss
+++ b/src/Components/^molecules/_index.scss
@@ -35,6 +35,9 @@
 
 @import './Pagination/pagination';
 
+@import './FaqList/faq-list.scss';
+@import './FaqItem/faq-item';
+
 //@import './Rate/rate';
 //@import './Map/map';
 //@import './Prices/prices';
